--- a/src/SL.Publisher/SL.Publisher.csproj
+++ b/src/SL.Publisher/SL.Publisher.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Common.Logging">
+      <HintPath>..\packages\Common.Logging.1.2.0\lib\1.0\Common.Logging.dll</HintPath>
+    </Reference>
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.1.2.10\lib\2.0\log4net.dll</HintPath>
     </Reference>
@@ -50,6 +53,9 @@
     <Reference Include="MassTransit.Transports.RabbitMq">
       <HintPath>..\packages\MassTransit.RabbitMQ.2.0.1.0\lib\net40\MassTransit.Transports.RabbitMq.dll</HintPath>
     </Reference>
+    <Reference Include="Quartz">
+      <HintPath>..\packages\Quartz.1.0.3\lib\3.5\Quartz.dll</HintPath>
+    </Reference>
     <Reference Include="RabbitMQ.Client">
       <HintPath>..\packages\RabbitMQ.Client.2.6.1\lib\net30\RabbitMQ.Client.dll</HintPath>
     </Reference>
@@ -64,6 +70,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PublisherWorker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -73,6 +80,10 @@
     <ProjectReference Include="..\SL.Domain\SL.Domain.csproj">
       <Project>{70CCA707-51EC-4637-A30C-247AAD200D4A}</Project>
       <Name>SL.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SL.WebParser\SL.Web.csproj">
+      <Project>{B84B8CED-F078-41C0-86E1-182B872B8577}</Project>
+      <Name>SL.Web</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
