--- a/src/SL.Publisher/packages.config
+++ b/src/SL.Publisher/packages.config
@@ -5,4 +5,6 @@
   <package id="MassTransit" version="2.0.1.0" />
   <package id="MassTransit.RabbitMQ" version="2.0.1.0" />
   <package id="RabbitMQ.Client" version="2.6.1" />
+  <package id="Common.Logging" version="1.2.0" />
+  <package id="Quartz" version="1.0.3" />
 </packages>
