--- a/src/SL.Publisher/packages.config
+++ b/src/SL.Publisher/packages.config
@@ -7,4 +7,5 @@
   <package id="RabbitMQ.Client" version="2.6.1" />
   <package id="Common.Logging" version="1.2.0" />
   <package id="Quartz" version="1.0.3" />
+  <package id="clrzmq2" version="2.1.0.2011100900" />
 </packages>
